<resources>
    <string name="app_name">Cookie</string>
    <string name="recipe_image_content_description">Recipe Image</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="media_url_mp3">http://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="add_widget">Add widget</string>
    <string name="add_widget_item_format">%1$s %2$s %3$s</string>
    <string name="widget_recipe_pinned">%1$s ingredients have been pinned to the widget.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Widget settings -->
    <string name="pref_header_widget">Widget</string>

    <string name="pref_title_select_a_recipe">Select a recipe</string>
    <string name="pin_to_widget">Pin to Widget</string>
    <string name="no_ingredients_pref">Open the app and pin the desired recipe to display its ingredients here.</string>
    <string-array name="pref_widget_recipe_list_titles">
        <item>Nutella Pie</item>
        <item>Brownies</item>
        <item>Yellow Cake</item>
        <item>CheeseCake</item>
    </string-array>
    <string-array name="pref_widget_recipe_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
