<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_card"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_16dp"
    android:layout_marginTop="@dimen/margin_16dp"
    android:layout_marginRight="@dimen/margin_16dp">

    <LinearLayout
        android:id="@+id/card_background_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_card_image_height"
            android:scaleType="fitXY"
            android:src="@drawable/default_card_background"
            android:contentDescription="@string/recipe_image_content_description" />

        <TextView
            android:id="@+id/recipe_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_12dp"
            android:maxLines="2"
            android:textStyle="bold"
            tools:text="Recipe Name"/>

    </LinearLayout>
</android.support.v7.widget.CardView>